# logging-library

DifferentLevelesLoggingTest/: CMakeLists.txt
DifferentLevelesLoggingTest/cmake/: FindLogLib.cmake
DifferentLevelesLoggingTest/resources/config/: logger-configuration.yaml
ElasticFileConsoleLoggingTest/: CMakeLists.txt
ElasticFileConsoleLoggingTest/resources/config/: logger-configuration.yaml
ElasticFileConsoleLoggingTest/src/: main.cpp
LogLib/include/logger/: Logger.h
LogLib/include/logger/parser/: YamlConfigurationParser.h
LogLib/include/logger/service/file/: FileLoggingService.h
LoggerLibrary/: CMakeLists.txt  Logger.h  config.yaml  main.cpp
LoggerLibrary/elastic/: logs-template.json
LoggerLibrary/logger/: Logger.cpp  Logger.h
LoggerLibrary/logger/model/: Log.cpp  Log.h  LogPriority.h
LoggerLibrary/logger/parser/: YamlConfigurationParser.cpp  YamlConfigurationParser.h
LoggerLibrary/logger/service/: LoggingService.h
LoggerLibrary/logger/service/elastic/: ElasticLoggingService.cpp  ElasticLoggingService.h
LoggerLibrary/logger/service/file/: FileLoggingService.cpp  FileLoggingService.h
LoggerLibrary/resources/docker/: docker-compose.yml
LoggerLibrary/resources/elastic/: logs-template.json
LoggerLibrary/src/logger/: Logger.cpp
LoggerLibrary/src/logger/model/: Log.cpp  Log.h
LoggerLibrary/src/logger/parser/: YamlConfigurationParser.cpp
LoggerLibrary/src/logger/service/: LoggingService.h
LoggerLibrary/src/logger/service/elastic/: ElasticLoggingService.cpp  ElasticLoggingService.h
LoggerLibrary/src/logger/service/file/: FileLoggingService.cpp
MultiThreadLoggingTests/: CMakeLists.txt
MultiThreadLoggingTests/src/: main.cpp
